berlin-setup-files/iptables-rules-default
# Generated by iptables-save v1.4.8 on Mon Feb  4 00:37:52 2013
*filter
:INPUT ACCEPT [1:40]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20:1296]
-A INPUT -m state --state INVALID -j DROP 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -i eth1 -j ACCEPT 
-A INPUT -i eth2 -j ACCEPT 
-A INPUT -i eth3 -j ACCEPT 
-A INPUT -i eth4 -j ACCEPT 
-A INPUT -i eth5 -j ACCEPT 
-A INPUT -i eth6 -j ACCEPT 
-A INPUT -i eth7 -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -p udp -m udp --dport 500 -j ACCEPT 
-A INPUT -p esp -j ACCEPT 
-A INPUT -p ah -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A FORWARD -i eth1 -j ACCEPT 
-A FORWARD -i eth2 -j ACCEPT 
-A FORWARD -i eth3 -j ACCEPT 
-A FORWARD -i eth4 -j ACCEPT 
-A FORWARD -i eth5 -j ACCEPT 
-A FORWARD -i eth6 -j ACCEPT 
-A FORWARD -i eth7 -j ACCEPT 
-A FORWARD -m state --state INVALID -j DROP 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
COMMIT
# Completed on Mon Feb  4 00:37:52 2013
